--- a/index.html
+++ b/index.html
@@ -1,79 +1,25 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Willkommen bei Alex Gaming</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Alex Gaming – Start</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: #0f0f0f;
-      color: #fff;
-    }
-    header {
-      background: #1a1a1a;
-      padding: 20px;
-      text-align: center;
-    }
-    header img {
-      height: 80px;
-    }
-    nav {
-      background: #2c2c2c;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 15px;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      color: #00ffcc;
-    }
-    .hero {
-      text-align: center;
-      padding: 60px 20px;
-      background: #181818;
-    }
-    .hero h1 {
-      font-size: 3em;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      font-size: 1.2em;
-      color: #aaa;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 25px;
-      padding: 12px 25px;
-      background: #00ffcc;
-      color: #000;
-      border-radius: 5px;
-      font-weight: bold;
-      text-decoration: none;
-    }
-    .section {
-      padding: 50px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    footer {
-      text-align: center;
-      background: #111;
-      padding: 20px;
-      color: #666;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; }
+    header, footer { background: #1a1a1a; text-align: center; padding: 20px; }
+    nav { background: #2c2c2c; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 15px; }
+    nav a { color: #fff; text-decoration: none; font-weight: bold; }
+    nav a:hover { color: #00ffcc; }
+    main { max-width: 1000px; margin: auto; padding: 40px 20px; }
+    h1 { color: #00ffcc; }
+    section { margin-bottom: 40px; }
   </style>
 </head>
 <body>
 
 <header>
-  <img src="https://i.postimg.cc/nLhPrLMH/1000072572-3643adb7b6957288cd73d569e60f8263-18-11-2023-12-35-17-20240415-181847-0000-Original.png" alt="Alex Gaming Logo">
+  <h1>Willkommen bei Alex Gaming</h1>
+  <p>Global. Kreativ. Verbunden.</p>
 </header>
 
 <nav>
@@ -86,24 +32,19 @@
   <a href="impressum.html">Impressum</a>
 </nav>
 
-<section class="hero">
-  <h1>Willkommen bei Alex Gaming</h1>
-  <p>Die Plattform für kreative Köpfe, Community-Enthusiasten und globale Visionäre.</p>
-  <a href="discord.html" class="btn">Jetzt der Community beitreten</a>
-</section>
-
-<section class="section">
-  <h2>Was wir machen</h2>
-  <p>Alex Gaming steht für Innovation, Kreativität und globale Verbindungen. Unsere Projekte verbinden Menschen, Ideen und moderne Web-Tools – weit über Gaming im klassischen Sinn hinaus.</p>
-</section>
-
-<section class="section">
-  <h2>Werde Teil der Bewegung</h2>
-  <p>Sei dabei – egal ob Partner, Mitglied oder Kreativgeist. Wir freuen uns auf deine Energie!</p>
-</section>
+<main>
+  <section>
+    <h2>Unsere Vision</h2>
+    <p>Wir schaffen globale Plattformen, kreative Konzepte und neue Wege der digitalen Vernetzung. Ohne Grenzen. Ohne Limits.</p>
+  </section>
+  <section>
+    <h2>Was wir tun</h2>
+    <p>Alex Gaming ist mehr als nur ein Name. Wir entwickeln innovative Inhalte, stärken Communities und gestalten Markenauftritte.</p>
+  </section>
+</main>
 
 <footer>
-  &copy; 2025 Alex Gaming – Alle Rechte vorbehalten
+  &copy; 2025 Alex Gaming
 </footer>
 
 </body>
