agb.html aktualisieren

--- a/agb.html
+++ b/agb.html
@@ -1,59 +1,50 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AGB – Alex Gaming</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; margin: 0; }
-    header, footer { background: #1a1a1a; padding: 20px; text-align: center; }
-    nav { background: #2c2c2c; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 15px; }
+    body { margin: 0; font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; }
+    header, footer { background: #1a1a1a; text-align: center; padding: 20px; }
+    nav { background: #2c2c2c; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; padding: 15px; }
     nav a { color: #fff; text-decoration: none; font-weight: bold; }
     nav a:hover { color: #00ffcc; }
-    main { padding: 40px 20px; max-width: 1000px; margin: auto; }
+    main { max-width: 1200px; margin: auto; padding: 20px; }
     h1, h2 { color: #00ffcc; }
     p { line-height: 1.6; }
+    @media (max-width: 768px) {
+      nav { flex-direction: column; align-items: center; }
+    }
   </style>
 </head>
 <body>
+  <header><h1>Allgemeine Geschäftsbedingungen</h1></header>
+  <nav>
+    <a href="index.html">Start</a>
+    <a href="ueber.html">Über Uns</a>
+    <a href="partner.html">Partner</a>
+    <a href="discord.html">Community</a>
+    <a href="agb.html">AGB</a>
+    <a href="datenschutz.html">Datenschutz</a>
+    <a href="impressum.html">Impressum</a>
+  </nav>
+  <main>
+    <h2>1. Geltungsbereich</h2>
+    <p>Diese AGB gelten für alle Leistungen und Angebote der Alex Gaming Studios (nachfolgend "Anbieter").</p>
 
-<header>
-  <h1>Allgemeine Geschäftsbedingungen</h1>
-</header>
+    <h2>2. Leistungen</h2>
+    <p>Wir bieten digitale Inhalte, kreative Dienstleistungen und Kooperationsmöglichkeiten weltweit an.</p>
 
-<nav>
-  <a href="index.html">Start</a>
-  <a href="ueber.html">Über Uns</a>
-  <a href="partner.html">Partner</a>
-  <a href="discord.html">Community</a>
-  <a href="agb.html">AGB</a>
-  <a href="datenschutz.html">Datenschutz</a>
-  <a href="impressum.html">Impressum</a>
-</nav>
+    <h2>3. Nutzung</h2>
+    <p>Unsere Inhalte dürfen ohne schriftliche Genehmigung nicht weiterverbreitet oder kommerziell genutzt werden.</p>
 
-<main>
-  <h2>1. Geltungsbereich</h2>
-  <p>Diese Allgemeinen Geschäftsbedingungen (AGB) gelten für alle Dienstleistungen und Angebote von Alex Gaming, sofern nicht ausdrücklich abweichende Vereinbarungen getroffen wurden.</p>
+    <h2>4. Haftung</h2>
+    <p>Für Inhalte Dritter übernehmen wir keine Haftung. Bei Verlinkungen haftet ausschließlich der jeweilige Anbieter.</p>
 
-  <h2>2. Leistungen</h2>
-  <p>Alex Gaming bietet kreative, digitale Inhalte und Plattform-Dienste mit internationaler Ausrichtung. Der genaue Leistungsumfang ergibt sich aus den jeweiligen Vereinbarungen oder Beschreibungen auf dieser Website.</p>
-
-  <h2>3. Vertragsschluss</h2>
-  <p>Ein Vertrag kommt erst durch ausdrückliche Annahme durch Alex Gaming zustande. Die Nutzung unserer Plattform setzt die Zustimmung zu diesen AGB voraus.</p>
-
-  <h2>4. Haftung</h2>
-  <p>Alex Gaming haftet nur für Schäden, die auf grober Fahrlässigkeit oder Vorsatz beruhen. Eine Haftung für mittelbare Schäden ist ausgeschlossen.</p>
-
-  <h2>5. Urheberrecht</h2>
-  <p>Alle Inhalte, Designs und Marken unterliegen dem Schutz des Urheber- und Markenrechts. Eine Verwendung außerhalb der Plattform ist ohne schriftliche Genehmigung nicht gestattet.</p>
-
-  <h2>6. Schlussbestimmungen</h2>
-  <p>Es gilt das Recht der Bundesrepublik Deutschland. Gerichtsstand ist – soweit rechtlich zulässig – der Sitz von Alex Gaming.</p>
-</main>
-
-<footer>
-  &copy; 2025 Alex Gaming – AGB
-</footer>
-
+    <h2>5. Schlussbestimmungen</h2>
+    <p>Es gilt deutsches Recht. Gerichtsstand ist – sofern gesetzlich zulässig – Köln.</p>
+  </main>
+  <footer>&copy; 2025 Alex Gaming</footer>
 </body>
 </html>
