datenschutz.html aktualisieren

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -2,28 +2,49 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Datenschutzerklärung – Alex Gaming</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; margin: 0; }
+    header, footer { background: #1a1a1a; padding: 20px; text-align: center; }
+    nav { background: #2c2c2c; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; padding: 15px; }
+    nav a { color: #fff; text-decoration: none; font-weight: bold; }
+    nav a:hover { color: #00ffcc; }
+    main { padding: 20px; max-width: 1200px; margin: auto; }
+    h1, h2 { color: #00ffcc; }
+    p { line-height: 1.6; }
+    @media (max-width: 768px) {
+      nav { flex-direction: column; align-items: center; }
+    }
+  </style>
 </head>
 <body>
-  <h1>Datenschutzerklärung</h1>
-  <p>Stand: Juni 2025</p>
+  <header><h1>Datenschutzerklärung</h1></header>
+  <nav>
+    <a href="index.html">Start</a>
+    <a href="ueber.html">Über Uns</a>
+    <a href="partner.html">Partner</a>
+    <a href="discord.html">Community</a>
+    <a href="agb.html">AGB</a>
+    <a href="datenschutz.html">Datenschutz</a>
+    <a href="impressum.html">Impressum</a>
+  </nav>
+  <main>
+    <h2>1. Datenschutz auf einen Blick</h2>
+    <p>Wir nehmen den Schutz deiner persönlichen Daten sehr ernst. Deine Daten werden vertraulich behandelt und gemäß der gesetzlichen Vorschriften verarbeitet.</p>
 
-  <h2>1. Allgemeines</h2>
-  <p>Der Schutz deiner Daten ist uns wichtig. Wir verarbeiten personenbezogene Daten nur gemäß geltender Datenschutzgesetze.</p>
+    <h2>2. Erfassung von Daten</h2>
+    <p>Beim Besuch dieser Website werden automatisch Informationen durch Server-Logfiles erfasst (z. B. IP-Adresse, Browsertyp). Diese Daten dienen ausschließlich der statistischen Auswertung.</p>
 
-  <h2>2. Verantwortlicher</h2>
-  <p>Verantwortlich: Alex Hürtgen, E-Mail: <a href="mailto:team.alexgaming@icloud.com">team.alexgaming@icloud.com</a></p>
+    <h2>3. Verwendung von Daten</h2>
+    <p>Personenbezogene Daten werden nur erfasst, wenn du sie uns freiwillig mitteilst – etwa per E-Mail oder durch die Nutzung von Kontaktformularen.</p>
 
-  <h2>3. Datenverarbeitung auf der Website</h2>
-  <p>IP-Adresse, Browserdaten und Nutzungsverhalten werden automatisch erfasst und anonymisiert ausgewertet.</p>
+    <h2>4. Rechte</h2>
+    <p>Du hast jederzeit das Recht auf Auskunft, Berichtigung oder Löschung deiner gespeicherten Daten.</p>
 
-  <h2>4. Cookies</h2>
-  <p>Diese Website nutzt Cookies. Du kannst diese in den Einstellungen deines Browsers deaktivieren.</p>
-
-  <h2>5. Deine Rechte</h2>
-  <p>Du hast jederzeit das Recht auf Auskunft, Berichtigung oder Löschung deiner Daten.</p>
-
-  <h2>6. Kontakt</h2>
-  <p>Bei Fragen erreichst du uns unter <a href="mailto:team.alexgaming@icloud.com">team.alexgaming@icloud.com</a>.</p>
+    <h2>5. Kontakt</h2>
+    <p>Verantwortlich für den Datenschutz: Alex Gaming – <a style="color:#00ffcc" href="mailto:team.alexgaming@icloud.com">team.alexgaming@icloud.com</a></p>
+  </main>
+  <footer>&copy; 2025 Alex Gaming</footer>
 </body>
 </html>
