impressum.html aktualisieren

--- a/impressum.html
+++ b/impressum.html
@@ -2,21 +2,46 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Impressum – Alex Gaming</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #0f0f0f; color: #fff; margin: 0; }
+    header, footer { background: #1a1a1a; padding: 20px; text-align: center; }
+    nav { background: #2c2c2c; display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; padding: 15px; }
+    nav a { color: #fff; text-decoration: none; font-weight: bold; }
+    nav a:hover { color: #00ffcc; }
+    main { padding: 20px; max-width: 1200px; margin: auto; }
+    h1, h2 { color: #00ffcc; }
+    p { line-height: 1.6; }
+    @media (max-width: 768px) {
+      nav { flex-direction: column; align-items: center; }
+    }
+  </style>
 </head>
 <body>
-  <h1>Impressum</h1>
-  <p>Angaben gemäß § 5 TMG</p>
+  <header><h1>Impressum</h1></header>
+  <nav>
+    <a href="index.html">Start</a>
+    <a href="ueber.html">Über Uns</a>
+    <a href="partner.html">Partner</a>
+    <a href="discord.html">Community</a>
+    <a href="agb.html">AGB</a>
+    <a href="datenschutz.html">Datenschutz</a>
+    <a href="impressum.html">Impressum</a>
+  </nav>
+  <main>
+    <h2>Angaben gemäß § 5 TMG</h2>
+    <p><strong>Alex Gaming Studios</strong><br>
+    Vertreten durch: Alex Hürtgen<br>
+    Kontakt: <a href="mailto:team.alexgaming@icloud.com" style="color:#00ffcc;">team.alexgaming@icloud.com</a><br>
+    Standort: Deutschland</p>
 
-  <h2>Dienstanbieter</h2>
-  <p>Alex Hürtgen<br />
-     Alex Gaming<br />
-     E-Mail: <a href="mailto:team.alexgaming@icloud.com">team.alexgaming@icloud.com</a></p>
+    <h2>Haftung für Inhalte</h2>
+    <p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte übernehmen wir jedoch keine Gewähr.</p>
 
-  <h2>Haftung für Inhalte</h2>
-  <p>Wir übernehmen keine Haftung für die Inhalte externer Links.</p>
-
-  <h2>Urheberrecht</h2>
-  <p>Alle Inhalte dieser Seite unterliegen dem Urheberrecht von Alex Gaming, sofern nicht anders gekennzeichnet.</p>
+    <h2>Urheberrecht</h2>
+    <p>Alle Inhalte und Werke auf dieser Website unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung ist nur mit ausdrücklicher Genehmigung gestattet.</p>
+  </main>
+  <footer>&copy; 2025 Alex Gaming</footer>
 </body>
 </html>
