partner.html aktualisieren

--- a/partner.html
+++ b/partner.html
@@ -1,51 +1,116 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Partner – Alex Gaming</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #0f0f0f; color: #fff; }
-    header, footer { background: #1a1a1a; text-align: center; padding: 20px; }
-    nav { background: #2c2c2c; display: flex; justify-content: center; gap: 20px; padding: 15px; }
-    nav a { color: #fff; text-decoration: none; font-weight: bold; }
-    nav a:hover { color: #00ffcc; }
-    section { padding: 50px 20px; max-width: 1000px; margin: auto; }
-    h1, h2 { color: #00ffcc; }
-    .partner-box { background: #1c1c1c; padding: 20px; border-radius: 10px; margin: 20px 0; }
+    :root {
+      --bg: #0f0f0f;
+      --text: #ffffff;
+      --highlight: #00ffcc;
+      --dark: #1a1a1a;
+      --nav: #2c2c2c;
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: var(--text); }
+
+    header, footer {
+      background: var(--dark);
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav {
+      background: var(--nav);
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 15px;
+    }
+
+    nav a {
+      color: var(--text);
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    nav a:hover {
+      color: var(--highlight);
+    }
+
+    main {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+
+    h1 {
+      font-size: 2.4em;
+      color: var(--highlight);
+    }
+
+    h2 {
+      font-size: 1.6em;
+      margin-top: 30px;
+      color: var(--highlight);
+    }
+
+    p {
+      color: #ccc;
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li {
+      background: #1a1a1a;
+      margin: 10px 0;
+      padding: 10px 15px;
+      border-left: 5px solid var(--highlight);
+    }
+
+    @media (max-width: 768px) {
+      nav { flex-direction: column; align-items: center; }
+    }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Unsere Partner</h1>
+    <p>Gemeinsam mehr erreichen – weltweit</p>
+  </header>
 
-<header>
-  <h1>Unsere Partner</h1>
-</header>
+  <nav>
+    <a href="index.html">Start</a>
+    <a href="ueber.html">Über Uns</a>
+    <a href="partner.html">Partner</a>
+    <a href="discord.html">Community</a>
+    <a href="agb.html">AGB</a>
+    <a href="datenschutz.html">Datenschutz</a>
+    <a href="impressum.html">Impressum</a>
+  </nav>
 
-<nav>
-  <a href="index.html">Start</a>
-  <a href="ueber.html">Über Uns</a>
-  <a href="partner.html">Partner</a>
-  <a href="discord.html">Community</a>
-  <a href="agb.html">AGB</a>
-  <a href="datenschutz.html">Datenschutz</a>
-  <a href="impressum.html">Impressum</a>
-</nav>
+  <main>
+    <p>Unsere Partner sind Teil unserer Mission. Sie bringen neue Impulse, Sichtbarkeit und Stärke in unsere Community.</p>
 
-<section>
-  <div class="partner-box">
-    <h2>🎶 Ayve Song Production</h2>
-    <p>Offizieller Partner von Alex Gaming. Gemeinsam gestalten wir Musik-, Medien- und Community-Projekte.</p>
-  </div>
+    <h2>Aktuelle Partner</h2>
+    <ul>
+      <li><strong>Ayve Song Production</strong> – Kreative Musiklösungen</li>
+      <li><strong>Studio NextStep</strong> – Branding und Design</li>
+      <li><strong>Global Connect Media</strong> – Internationale Verbreitung</li>
+    </ul>
 
-  <div class="partner-box">
-    <h2>🌐 Deine Marke hier?</h2>
-    <p>Interesse an einer Partnerschaft oder Werbefläche auf Alex Gaming? Melde dich bei <a href="mailto:team.alexgaming@icloud.com">team.alexgaming@icloud.com</a>.</p>
-  </div>
-</section>
+    <h2>Partner werden?</h2>
+    <p>Du willst mit uns kooperieren? Dann melde dich direkt bei uns via <a href="mailto:team.alexgaming@icloud.com" style="color: var(--highlight);">E-Mail</a> oder über unsere Community.</p>
+  </main>
 
-<footer>
-  &copy; 2025 Alex Gaming – Partner & Werbung
-</footer>
-
+  <footer>&copy; 2025 Alex Gaming</footer>
 </body>
 </html>
