--- a/discord.html
+++ b/discord.html
@@ -6,11 +6,11 @@
   <title>Community – Alex Gaming</title>
   <style>
     :root {
-      --bg: #0f0f0f;
-      --text: #ffffff;
-      --highlight: #00ffcc;
-      --dark: #1a1a1a;
-      --nav: #2c2c2c;
+      --bg: #0e0e0e;
+      --text: #f0f0f0;
+      --highlight: #00ffd0;
+      --nav: #1a1a1a;
+      --section: #141414;
     }
 
     * {
@@ -20,15 +20,27 @@
     }
 
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: var(--bg);
+      font-family: "Segoe UI", sans-serif;
+      background-color: var(--bg);
       color: var(--text);
+      line-height: 1.6;
     }
 
-    header, footer {
-      background: var(--dark);
-      padding: 20px;
+    header {
+      background-color: var(--nav);
+      padding: 40px 20px;
       text-align: center;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      color: var(--highlight);
+      margin-bottom: 10px;
+    }
+
+    header p {
+      color: #ccc;
+      font-size: 1.1em;
     }
 
     .navbar {
@@ -42,20 +54,20 @@
 
     .logo {
       font-size: 1.5em;
-      color: var(--highlight);
       font-weight: bold;
+      color: var(--highlight);
     }
 
     .menu {
       display: flex;
-      flex-wrap: wrap;
       gap: 15px;
+      flex-wrap: wrap;
     }
 
     .menu a {
       text-decoration: none;
       color: var(--text);
-      font-weight: 600;
+      font-weight: 500;
     }
 
     .menu a:hover {
@@ -91,49 +103,58 @@
     }
 
     main {
+      padding: 40px 20px;
       max-width: 1000px;
       margin: auto;
-      padding: 40px 20px;
       text-align: center;
     }
 
-    h1 {
-      font-size: 2.4em;
+    section {
+      margin-bottom: 40px;
+      background-color: var(--section);
+      padding: 30px;
+      border-radius: 10px;
+    }
+
+    h2 {
       color: var(--highlight);
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     p {
       color: #ccc;
       font-size: 1.1em;
-      margin-bottom: 30px;
     }
 
     .discord-button {
+      display: inline-block;
       background: var(--highlight);
       color: #000;
-      padding: 12px 24px;
-      text-decoration: none;
-      border-radius: 6px;
+      padding: 14px 28px;
+      margin-top: 20px;
       font-weight: bold;
-      transition: background 0.3s;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s ease;
     }
 
     .discord-button:hover {
-      background: #00ddaa;
+      background: #00e6b8;
+    }
+
+    footer {
+      background-color: var(--nav);
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Unsere Community</h1>
-    <p>Treffpunkt. Netzwerk. Bewegung.</p>
-  </header>
-
   <nav class="navbar">
     <div class="logo">Alex Gaming</div>
-    <input type="checkbox" id="toggle3" class="toggle" />
-    <label for="toggle3" class="hamburger">&#9776;</label>
+    <input type="checkbox" id="toggle2" class="toggle" />
+    <label for="toggle2" class="hamburger">&#9776;</label>
     <div class="menu">
       <a href="index.html">Start</a>
       <a href="ueber.html">Über Uns</a>
@@ -145,9 +166,17 @@
     </div>
   </nav>
 
+  <header>
+    <h1>Community</h1>
+    <p>Dein Platz in der Alex Gaming Bewegung</p>
+  </header>
+
   <main>
-    <p>Unsere Discord-Community ist das Herzstück unseres Projekts. Austausch, Events, Feedback und Ideen – alles an einem Ort.</p>
-    <a class="discord-button" href="https://discord.gg/DEININVITELINK" target="_blank">Jetzt beitreten</a>
+    <section>
+      <h2>Verbinde dich mit uns</h2>
+      <p>Auf unserem Discord findest du Events, News, Austausch, Ideen, Projekte, Support und vieles mehr. Sei nicht nur Zuschauer – sei Teil des Ganzen.</p>
+      <a href="https://discord.gg/DEININVITELINK" class="discord-button" target="_blank">Jetzt beitreten</a>
+    </section>
   </main>
 
   <footer>&copy; 2025 Alex Gaming</footer>
